// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de Mostrar el componente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffe mug - Sin imagen
  </span>
</div>
`;
